@@ -1,7 +1,14 @@
+from DateTime import DateTime
 from zope.publisher.browser import TestRequest
 from plone.session.interfaces import ISessionPlugin, ISessionSource
 import plone.session
-from sessioncase import FunctionalPloneSessionTestCase
+from plone.session.tests.sessioncase import FunctionalPloneSessionTestCase
+
+
+class MockResponse:
+    def setCookie(self, name, value, path, expires=None):
+        self.cookie=value
+        self.cookie_expires=expires
 
 
 class TestSessionPlugin(FunctionalPloneSessionTestCase):
@@ -12,17 +19,15 @@ class TestSessionPlugin(FunctionalPloneSessionTestCase):
         source=session.source
         self.assertEqual(ISessionSource.providedBy(source), True)
 
+
     def makeRequest(self, cookie):
         session=self.folder.pas.session
         return TestRequest(**{session.cookie_name : cookie})
 
+
     def testOneLineCookiesOnly(self):
         def createIdentifier(self, *args):
             return "x"*256
-
-        class MockResponse:
-            def setCookie(self, name, value, path):
-                self.cookie=value
 
         response=MockResponse()
         session=self.folder.pas.session
@@ -35,6 +40,22 @@ class TestSessionPlugin(FunctionalPloneSessionTestCase):
 
         klass.createIdentifier=org
         self.assertEqual(len(response.cookie.split()), 1)
+
+
+    def testCookieLifetimeNoExpiration(self):
+        response=MockResponse()
+        session=self.folder.pas.session
+        session.setupSession(None, response)
+        self.assertEqual(response.cookie_expires, None)
+
+
+    def testCookieLifetimeWithExpirationSet(self):
+        response=MockResponse()
+        session=self.folder.pas.session
+        session.cookie_lifetime = 100
+        session.setupSession(None, response)
+        self.assertEqual(DateTime(response.cookie_expires).strftime('%Y%m%d'),
+                        (DateTime()+100).strftime('%Y%m%d'))
         
 
     def testExtraction(self):
@@ -49,6 +70,7 @@ class TestSessionPlugin(FunctionalPloneSessionTestCase):
         creds=session.extractCredentials(request)
         self.assertEqual(creds, {})
 
+
     def testCredentialsUpdate(self):
         session=self.folder.pas.session
         request=self.makeRequest("test string")
@@ -59,6 +81,7 @@ class TestSessionPlugin(FunctionalPloneSessionTestCase):
                 "our_user", "password")
         self.assertNotEqual(request.response.getCookie(session.cookie_name),
                 None)
+
 
 
 def test_suite():
